Add content of JVM tuning