@@ -132,19 +132,121 @@ The throughput garbage collector is specified by the HotSpot VM command line opt
 
 ## GC Tuning Fundamentals
 
+GC tuning fundamentals contain the following content: attributes of garbage collection performance, GC tuning principles, and GC logging. Understanding the important trade-offs among the attributes, the tuning principles, and what information to collect is crucial to JVM tuning. 
+
 **The Performance Attributes**
+
+- Throughput.
+- Latency.
+- Footprint.
+
+A performance improvement for one of these attributes almost always is at the expense of one or both of the other attributes.
 
 **The Principles**
 
+There are three fundamental principle to tuning GC:
+
+- **The minor GC reclamation principle**. At each minor garbage collection, maximize the number of objects reclaimed. Adhering to this principle helps reduce the number and frequency of full garbage collections experienced by the application. Full GC typically have the longest duration and as a result are applications not meeting their latency or throughput requirements.
+-  **The GC maximize memory principle**. The more memory made available to garbage collector, that is, the larger the Java heap space, the better the garbage collector and application perform when it comes to throughput and latency.
+- **The 2 of 3 GC tuning principle**. Tune the JVM's garbage collector for two of the three performance attributes: throughput, latency, and footprint.
+
+Keeping these three principles in mind makes the task of meeting your application's performance requirements much easier.
+
 **Command Line Options and GC Logging**
 
+The JVM tuning decisions made utilize metrics observed from monitoring garbage collections. Collecting this information in garbage collection logs is the best approach. This garbage collection statistics gathering must be enabled via HotSpot VM command line options. Enabling GC logging, even in production systems, is a good idea. It has minimal overhead and provides a wealth of information that can be used to correlate application level events with garbage collection or JVM level events.
 
+Several HotSpot VM command line options are of interest for garbage collection logging. The following is the minimal set of recommended command line options to use:
+
+```
+-XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:<filename>
+```
+
+- `-XX:+PrintGCTimeStamps` prints a time stamp representing the number of seconds since the HotSpot VM was launched until the garbage collection occurred.
+- `-XX:+PrintGCDetails` provides garbage collector statistics.
+- `-Xloggc:<filename>` directs the garbage collection information to the file.
+
+Others useful options:
+
+- To see a calendar date and time of day rather than a time stamp
+  - `-XX:+PrintGCDateStamps`
+- Tuning for low response time/latency
+  - `-XX:+PrintGCApplicationStoppedTime`
+  - `-XX:+PrintGCApplicationConcurrentTime`
+  - `-XX:+PrintSafepointStatistics`
+
+Here is example output using the preceding three garbage collection logging command line options.
+
+```
+45.152: [GC
+	[PSYoungGen: 295648K->32968K(306432K)]
+	296198K->33518K(1006848K), 0.1083183 secs]
+	[Times: user=1.83 sys=0.01, real=0.11 secs]
+```
+
+- In the first line of GC logging, `46.152` is the number of seconds since the JVM launched.
+- In the second line, `PSYoungGen` means a young generation garbage collection. `295648K->32968K(306432K)` means the occupancy of the young generation space prior and after to the garbage collection. The value inside the parentheses `(306432K)` is the size of the young generation space, that is, the total size of eden and the two survivor spaces.
+- In the third line, `296198K->33518K(1006848K)` means the Java heap utilization before and after the garbage collection. The value inside the parentheses `(1006848K)` is the total size of the Java heap.
+- In the fourth line, `[Times: user=1.83 sys=0.01, real=0.11 secs]` provides CPU and elapsed time information. `1.83` seconds of CPU time in user mode, `0.01` seconds of operating system CPU time, `0.11` seconds is the elapsed wall clock time in seconds of the garbage collection. In this example, it took 0.11 seconds to complete the garbage collection.
 
 ## Determine Memory Footprint
 
+Up to this point in the tuning process, no measurements have been taken. Only some initial choices have been made. This step of tuning process provides a good estimate of the amount of memory or Java heap size required to run the application. The outcome of this step identifies the live data size for the application. The live data size provides input into a good starting point for a Java heap size configuration to run the application.
+
+Live data size is the amount of memory in the Java heap consumed by the set of long-lived objects required to run the application in its steady state. In other words, it is the Java heap occupancy after a full garbage collection while the application is in steady state.
+
+**Constraints**
+
+The following list helps determine how much physical memory can be made available to the JVM(s):
+
+- Will the Java application be deployed in a single JVM on a machine where it is the only application running? If that is the case, then all the physical memory on the machine can be made available to JVM.
+- Will the Java application be deployed in multiple JVMs on the same machine? or will the machine be shared by other processes or other Java application? If either case applies, then you must decide how much physical memory will be made available to each process and JVM.
+
+In either of the preceding scenarios, some memory must be reserved for the operating system.
+
+**HotSpot VM Heap Layout**
+
+Before taking some footprint measurements, it is important to have an understanding of the HotSpot VM Java heap layout. The HotSpot VM has three major spaces: young generation, old generation, and permanent generation. The heap data area composes of the young generation and the old generation.
+
+The new objects are allocated in the young generation space. Objects that survive after some number of minor garbage collections are promoted into the old generation space. The permanent generation space holds VM and Java class metadata as well as interned Strings and class static variables.
+
+Following command line options specify the size of area data space:
+
+- Heap area
+  - `-Xmx` specified the maximum size of heap.
+  - `-Xms` specified the initial size of heap.
+- Young generation
+  - `-XX:NewSize=<n>[g|m|k]` specified the initial and minimum size of the young generation space.
+  - `-XX:MaxNewSize=<n>[g|m|k]` specified the maximum size of the young generation space.
+  - `-Xmn<n>[g|m|k]` sets the initial, minimum, and maximum size of the young generation space.
+- Permanent generation
+  - `-XX:PermSize=<n>[g|m|k]` specified the initial and minimum size of permanent generation space.
+  - `-XX:MaxPermSize=<n>[g|m|k]` specified the maximum size of permanent space.
+
+If any Java heap size, initial or maximum size, young generation size, or permanent generation size is not specified, the HotSpot VM automatically choose values based on the system configuration it discovers through an adaptive tuning feature called ergonomics.
+
+It is important to understand that a garbage collection occurs when any one of the three spaces, young generation, old generation, or permanent generation, is in a state where it can no longer satisfy an allocation event. 
+
+When the young generation space does not have enough available to satisfy a Java object allocation, the HotSpot VM performs a minor GC to free up space. Minor GC tend to be short in duration relative to full GC.
+
+When the old generation space no longer has available space for promoted objects, the HotSpot VM performs a full garbage collection. It actually performs a full garbage collection when it determines there is not enough available space for object promotions from next minor garbage collection.
+
+A full garbage collection also occurs when the permanent generation space does not have enough available space to store additional VM or class metadata.
+
+In a full GC, both old generation, permanent generation and young generation are garbage collected. `-XX:-ScavengeBeforeFullGC` will disable young generation space garbage collection on full garbage collections.
+
+**Heap Size Starting Point**
+
+
+
+
+
+
+
+## Tune Latency/Responsiveness
+
 ...
 
-- Tune Latency/Responsiveness
 - Tune Application Throughput
 - Conclusion
 
